adding team cards

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 
 </head>
 <body>
-  <h2>Foodle.</h2>
 
   <div class="row">
-    <div class="col-xs-12 text-center foodle">
+    <div class="col s12 foodle">
       <h1 class="see-food">foodle.
       <!-- <i class="fa fa-cutlery" aria-hidden="true"></i> -->
       </h1>
@@ -29,38 +28,44 @@
   </div>
 
   <div class="row">
-    <div class="card col m3">
+
+    <!-- <div class="card col offset-s1 s2"> -->
+    <div class="card col s6 m2">
      <div class="card-image waves-effect waves-block waves-light">
        <img class="activator" src="Milton.png">
      </div>
      <div class="card-content">
        <span class="card-title activator grey-text text-darken-4">Jovvi Johnson<i class="material-icons right">more_vert</i></span>
-       <p><a href="#">This is a link</a></p>
+       <p><a href="http://tiffinekoch.co/">tiffinekoch.co</a></p>
+       <p><a href="https://github.com/tiffine-koch">Github</a></p>
      </div>
      <div class="card-reveal">
        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
        <p>Here is some more information about this product that is only revealed once clicked on.</p>
      </div>
    </div>
-    <div class="card col m3">
-     <div class="card-image waves-effect waves-block waves-light">
-       <img class="activator" src="Milton.png">
-     </div>
-     <div class="card-content">
-       <span class="card-title activator grey-text text-darken-4">Tiffine Koch<i class="material-icons right">more_vert</i></span>
-       <p><a href="#">This is a link</a></p>
-     </div>
-     <div class="card-reveal">
-       <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-       <p>Here is some more information about this product that is only revealed once clicked on.</p>
-     </div>
-   </div>
-    <div class="card col m3">
+
+    <div class="card col s6 offset-m1 m2">
      <div class="card-image waves-effect waves-block waves-light">
        <img class="activator" src="41bw.jpg">
      </div>
      <div class="card-content">
-       <span class="card-title activator grey-text text-darken-4">Josh Houch<i class="material-icons right">more_vert</i></span>
+       <span class="card-title activator grey-text text-darken-4">Tiffine Koch<i class="material-icons right">more_vert</i></span>
+       <p><a href="http://tiffinekoch.co/">tiffinekoch.co</a></p>
+       <p><a href="https://github.com/tiffine-koch">Github</a></p>
+     </div>
+     <div class="card-reveal">
+       <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+       <p>Here is some more information about this product that is only revealed once clicked on.</p>
+     </div>
+   </div>
+
+    <div class="card col s6 offset-m1 m2">
+     <div class="card-image waves-effect waves-block waves-light">
+       <img class="activator" src="41bw.jpg">
+     </div>
+     <div class="card-content">
+       <span class="card-title activator grey-text text-darken-4">Josh Houck<i class="material-icons right">more_vert</i></span>
        <p><a href="#">This is a link</a></p>
      </div>
      <div class="card-reveal">
@@ -68,9 +73,10 @@
        <p>Here is some more information about this product that is only revealed once clicked on.</p>
      </div>
    </div>
-    <div class="card col m3">
+
+    <div class="card col s6 offset-m1 m2 offset-m1">
      <div class="card-image waves-effect waves-block waves-light">
-       <img class="activator" src="Milton.png">
+       <img class="activator" src="41bw.jpg">
      </div>
      <div class="card-content">
        <span class="card-title activator grey-text text-darken-4">Irene Li<i class="material-icons right">more_vert</i></span>
@@ -82,7 +88,29 @@
      </div>
    </div>
   </div>
-
+  <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
 
 </body>
 </html>
