--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="bower_components/Materialize/dist/css/materialize.min.css">
-  <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-  <link rel='stylesheet' href='css/style.css' />
+  <link rel='stylesheet' href='style.css' />
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
-  <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
 
 </head>
 <body>
@@ -29,85 +27,116 @@
 
   <div class="row">
 
+    <div class="col s12 m4">
+      <div id="home" class="container screenshot">
+        <img src="img/home.png" alt="">
+      </div>
+    </div>
+
+    <div class="col s12 m4">
+      <div id="infoBox" class="container">
+      <!-- <div class="container screenshot"> -->
+        <p>Fanny pack schlitz wayfarers, post-ironic gluten-free four dollar toast aesthetic YOLO salvia portland cray. Next level vegan fingerstache tacos. Blog church-key irony meggings sustainable. Trust fund heirloom DIY next level. Freegan ramps fanny pack, lomo tumblr brooklyn direct trade. Kale chips butcher literally DIY pabst hoodie cred. 90's banh mi XOXO sartorial put a bird on it craft beer.</p>
+        <p>Austin normcore godard, selfies mumblecore hella gentrify migas YOLO direct trade semiotics. Normcore ennui authentic craft beer, sustainable pickled distillery DIY lomo stumptown typewriter flannel. Crucifix disrupt freegan, affogato keytar meh migas cardigan actually twee forage whatever deep v keffiyeh.</p>
+        <div id="droidButton">
+          <p id="droidP">Get the Android App Now on Google Play!</p>
+          <button class="btn waves-effect waves-light">Download  <i class="material-icons">android</i></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m4">
+      <div class="container screenshot">
+        <img src="img/swipe.png" alt="">
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
     <!-- <div class="card col offset-s1 s2"> -->
-    <div class="card col s6 m2">
+    <div class="card col s6 offset-m2 m2">
      <div class="card-image waves-effect waves-block waves-light">
-       <img class="activator" src="Milton.png">
+       <img class="activator" src="img/jovvi.jpg">
      </div>
      <div class="card-content">
        <span class="card-title activator grey-text text-darken-4">Jovvi Johnson<i class="material-icons right">more_vert</i></span>
-       <p><a href="http://tiffinekoch.co/">tiffinekoch.co</a></p>
-       <p><a href="https://github.com/tiffine-koch">Github</a></p>
+       <p><a href="http://tiffinekoch.co/" target="_blank">Email Jovvi</a></p>
+       <p><a href="https://github.com/jovjohnson" target="_blank">Github</a></p>
      </div>
      <div class="card-reveal">
-       <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-       <p>Here is some more information about this product that is only revealed once clicked on.</p>
+       <span class="card-title grey-text text-darken-4">< Jovvi /><i class="material-icons right">close</i></span>
+       <p>Jovvi is is a creative developer who enjoys cultivating the link between visual communication and technology.</p>
      </div>
    </div>
 
-    <div class="card col s6 offset-m1 m2">
+    <div class="card col s6 m2">
      <div class="card-image waves-effect waves-block waves-light">
-       <img class="activator" src="41bw.jpg">
+       <img class="activator" src="img/tiffine.jpg">
      </div>
      <div class="card-content">
        <span class="card-title activator grey-text text-darken-4">Tiffine Koch<i class="material-icons right">more_vert</i></span>
-       <p><a href="http://tiffinekoch.co/">tiffinekoch.co</a></p>
-       <p><a href="https://github.com/tiffine-koch">Github</a></p>
+       <p><a href="http://tiffinekoch.co/" target="_blank">tiffinekoch.co</a></p>
+       <p><a href="https://github.com/tiffine-koch" target="_blank">Github</a></p>
      </div>
      <div class="card-reveal">
-       <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-       <p>Here is some more information about this product that is only revealed once clicked on.</p>
+       <span class="card-title grey-text text-darken-4">< Tiffine /><i class="material-icons right">close</i></span>
+       <p>Tiffine is an energetic + creative Full Stack Developer with a love of design, code, software and people.</p>
      </div>
    </div>
 
-    <div class="card col s6 offset-m1 m2">
+    <div class="card col s6 m2">
      <div class="card-image waves-effect waves-block waves-light">
-       <img class="activator" src="41bw.jpg">
+       <img class="activator" src="img/josh.jpeg">
      </div>
      <div class="card-content">
        <span class="card-title activator grey-text text-darken-4">Josh Houck<i class="material-icons right">more_vert</i></span>
-       <p><a href="#">This is a link</a></p>
+       <p><a href="#">Email Josh</a></p>
+       <p><a href="https://github.com/JHouck1230" target="_blank">Github</a></p>
      </div>
      <div class="card-reveal">
-       <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+       <span class="card-title grey-text text-darken-4">< Josh /><i class="material-icons right">close</i></span>
        <p>Here is some more information about this product that is only revealed once clicked on.</p>
      </div>
    </div>
 
-    <div class="card col s6 offset-m1 m2 offset-m1">
+    <div class="card col s6 m2">
      <div class="card-image waves-effect waves-block waves-light">
-       <img class="activator" src="41bw.jpg">
+       <img class="activator" src="img/irene.jpg">
      </div>
      <div class="card-content">
        <span class="card-title activator grey-text text-darken-4">Irene Li<i class="material-icons right">more_vert</i></span>
-       <p><a href="#">This is a link</a></p>
+       <p><a href="mailto:li.irene1@gmail.com">Email Irene</a></p>
+       <p><a href="https://github.com/liirene1/SeeFood" target="_blank">Github</a></p>
+
      </div>
      <div class="card-reveal">
-       <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-       <p>Here is some more information about this product that is only revealed once clicked on.</p>
+       <span class="card-title grey-text text-darken-4">< Irene /><i class="material-icons right">close</i></span>
+       <p>With a strong background in business and finance, Irene is passionate about solving problems with technology.</p>
      </div>
    </div>
   </div>
+
   <footer class="page-footer">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <h5 class="white-text">Foodle</h5>
+            <p class="grey-text text-lighten-4">It's never been easier to choose your dinner destination.</p>
           </div>
           <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
+            <h5 class="white-text">Get the App</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Google Play</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Email the Team</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="footer-copyright">
         <div class="container">
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        © 2016 Copyright
+        <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
         </div>
       </div>
     </footer>
