fixed layout issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <div class="row">
     <div class="col s12 foodle">
       <h1 class="see-food">foodle.
-      <!-- <i class="fa fa-cutlery" aria-hidden="true"></i> -->
       </h1>
     </div>
   </div>
@@ -29,15 +28,19 @@
 
     <div class="col s12 m4">
       <div id="home" class="container screenshot">
-        <img src="img/home.png" alt="">
+        <img src="img/homeUpdate.png" alt="">
       </div>
     </div>
 
     <div class="col s12 m4">
       <div id="infoBox" class="container">
-      <!-- <div class="container screenshot"> -->
         <p>Fanny pack schlitz wayfarers, post-ironic gluten-free four dollar toast aesthetic YOLO salvia portland cray. Next level vegan fingerstache tacos. Blog church-key irony meggings sustainable. Trust fund heirloom DIY next level. Freegan ramps fanny pack, lomo tumblr brooklyn direct trade. Kale chips butcher literally DIY pabst hoodie cred. 90's banh mi XOXO sartorial put a bird on it craft beer.</p>
-        <p>Austin normcore godard, selfies mumblecore hella gentrify migas YOLO direct trade semiotics. Normcore ennui authentic craft beer, sustainable pickled distillery DIY lomo stumptown typewriter flannel. Crucifix disrupt freegan, affogato keytar meh migas cardigan actually twee forage whatever deep v keffiyeh.</p>
+        <p>We love cutting-edge libraries and the open source communities. Check out the technologies listed below:</p>
+        <p>Angular | Ionic | Corova | Firebase | MongoDB | Node.js | Express | Materialize | jQuery | Gulp | Lodash | Yelp API | Google API</p>
+        <div id="icon">
+          <i class="fa fa-cutlery" aria-hidden="true"></i>
+        </div>
+
         <div id="droidButton">
           <p id="droidP">Get the Android App Now on Google Play!</p>
           <button class="btn waves-effect waves-light">Download  <i class="material-icons">android</i></button>
@@ -47,7 +50,7 @@
 
     <div class="col s12 m4">
       <div class="container screenshot">
-        <img src="img/swipe.png" alt="">
+        <img src="img/swipeUpdate.png" alt="">
       </div>
     </div>
   </div>
@@ -90,12 +93,12 @@
      </div>
      <div class="card-content">
        <span class="card-title activator grey-text text-darken-4">Josh Houck<i class="material-icons right">more_vert</i></span>
-       <p><a href="#">Email Josh</a></p>
+       <p><a href="mailto:josh123090@gmail.com">Email Josh</a></p>
        <p><a href="https://github.com/JHouck1230" target="_blank">Github</a></p>
      </div>
      <div class="card-reveal">
        <span class="card-title grey-text text-darken-4">< Josh /><i class="material-icons right">close</i></span>
-       <p>Here is some more information about this product that is only revealed once clicked on.</p>
+       <p>Josh loves programming and connecting people with technology. He is outgoing and passionate about learning.</p>
      </div>
    </div>
 
@@ -127,8 +130,8 @@
             <h5 class="white-text">Get the App</h5>
             <ul>
               <li><a class="grey-text text-lighten-3" href="#!">Google Play</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Email the Team</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://github.com/liirene1/SeeFood">GitHub</a></li>
+              <li><a class="grey-text text-lighten-3" href="mailto:tiffine.koch@gmail.com">Email the Team</a></li>
             </ul>
           </div>
         </div>
