fixing the things

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="infoBox" class="container">
         <p>Fanny pack schlitz wayfarers, post-ironic gluten-free four dollar toast aesthetic YOLO salvia portland cray. Next level vegan fingerstache tacos. Blog church-key irony meggings sustainable. Trust fund heirloom DIY next level. Freegan ramps fanny pack, lomo tumblr brooklyn direct trade. Kale chips butcher literally DIY pabst hoodie cred. 90's banh mi XOXO sartorial put a bird on it craft beer.</p>
         <p>We love cutting-edge libraries and the open source communities. Check out the technologies listed below:</p>
-        <p>Angular | Ionic | Corova | Firebase | MongoDB | Node.js | Express | Materialize | jQuery | Gulp | Lodash | Yelp API | Google API</p>
+        <p>Angular | Ionic | Cordova | Firebase | MongoDB | Node.js | Express | Materialize | jQuery | Gulp | Lodash | Yelp API | Google API</p>
         <div id="icon">
           <i class="fa fa-cutlery" aria-hidden="true"></i>
         </div>
