--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
     <div class="col s12 m4">
       <div id="infoBox" class="container">
-        <p>Fanny pack schlitz wayfarers, post-ironic gluten-free four dollar toast aesthetic YOLO salvia portland cray. Next level vegan fingerstache tacos. Blog church-key irony meggings sustainable. Trust fund heirloom DIY next level. Freegan ramps fanny pack, lomo tumblr brooklyn direct trade. Kale chips butcher literally DIY pabst hoodie cred. 90's banh mi XOXO sartorial put a bird on it craft beer.</p>
+        <p>Foodle swipes out the daily struggle of finding what’s the best food to eat nearby!</p>
+        <p>A way to match you to the most constant, rewarding partner in your life… food. Never distress over what you are eating again!</p>
         <p>We love cutting-edge libraries and the open source communities. Check out the technologies listed below:</p>
         <p>Angular | Ionic | Cordova | Firebase | MongoDB | Node.js | Express | Materialize | jQuery | Gulp | Lodash | Yelp API | Google API</p>
         <div id="icon">
