--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="card col s6 m2">
      <div class="card-image waves-effect waves-block waves-light">
-       <img class="activator" src="img/josh.jpeg">
+       <img class="activator" src="img/josh3.jpeg">
      </div>
      <div class="card-content">
        <span class="card-title activator grey-text text-darken-4">Josh Houck<i class="material-icons right">more_vert</i></span>
