--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
+  <script src="favicon-setter.js"></script>
+  <script src="main.js"></script>
 
 </head>
 <body>
