added google play link. working site

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div id="droidButton">
           <p id="droidP">Get the Android App Now on Google Play!</p>
-          <button class="btn waves-effect waves-light">Download  <i class="material-icons">android</i></button>
+          <button class="btn waves-effect waves-light"><a class="googleLink" href="https://play.google.com/store/apps/details?id=com.awesome.foodle" target="_blank">Download&nbsp;&nbsp;</a><i class="material-icons">android</i></button>
         </div>
       </div>
     </div>
@@ -135,7 +135,7 @@
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Get the App</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Google Play</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://play.google.com/store/apps/details?id=com.awesome.foodle" target="_blank">Google Play</a></li>
               <li><a class="grey-text text-lighten-3" href="https://github.com/liirene1/SeeFood">GitHub</a></li>
               <li><a class="grey-text text-lighten-3" href="mailto:tiffine.koch@gmail.com">Email the Team</a></li>
             </ul>
