--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h5 class="white-text">Get the App</h5>
             <ul>
               <li><a class="grey-text text-lighten-3" href="https://play.google.com/store/apps/details?id=com.awesome.foodle" target="_blank">Google Play</a></li>
-              <li><a class="grey-text text-lighten-3" href="https://github.com/liirene1/SeeFood">GitHub</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://github.com/liirene1/SeeFood" target="_blank">GitHub</a></li>
               <li><a class="grey-text text-lighten-3" href="mailto:tiffine.koch@gmail.com">Email the Team</a></li>
             </ul>
           </div>
